# melon

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
arucoMarkers/markers/4x4/: all_markers.psd
arucoMarkers/sampleArenas/: arena_with_robots.psd
arucoMarkers/sampleArenas/4x4/: arena.psd
arucoMarkers/sampleArenas/6x6/: arena_with_robots_6x6.psd
src/: StateVariables.h  _main.cpp  command_handler.cpp  command_handler.h  logger.cpp  logger.h  main.cpp  main_calibration.cpp  main_linreg.cpp  server.cpp  state.proto  state_variables.h
src/camera/: abstractcamera.cpp  abstractcamera.h  camera.cpp  camera.h  cameracalib.h  camerawrapper.cpp  camerawrapper.h  opencvcamera.cpp  opencvcamera.h  spinnakercamera.cpp  spinnakercamera.h
src/cmdhandler/: command_handler.cpp  command_handler.h  global_state.h  globalstate.cpp  globalstate.h  server.cpp  server.h  session.cpp  session.h  state.pb.cc  state.pb.h  state.proto  state_variables.h  statevariables.h
src/cmdhandler/commands/: command.h  namedcmd.cpp  namedcmd.h
src/cmdhandler/constants/: commands.h  systems.h  variables.h
src/cmdhandler/systems/: robotsystem.cpp  robotsystem.h  system.cpp  system.h
src/cmdhandler/variables/: variable.cpp  variable.h
src/collectorserver/: collectorserver.cpp  collectorserver.h
src/detectors/: arena.h  arenadetector.cpp  arenadetector.h  marker.h  markerdetector.cpp  markerdetector.h  robotdata.h  robotdetector.cpp  robotdetector.h
tests/cmdhandler/: camera_system_tests.cc  collector_system_tests.cc  command_handler_tests.cc  robot_system_tets.cc  state_system_tests.cc
